--- a/src/html/secondPages/download.html
+++ b/src/html/secondPages/download.html
@@ -12,14 +12,11 @@
 				<h4 class="download__desktop-title">Desktop</h4>
 				<ul class="download__desktop-buttons">
 					<li class="download__desktop-item">
-						<a class="download__desktop-link btn-with-icon">
+						<a class="download__desktop-link btn-with-icon" target="_blank" href="https://boosteroid.com/win/installer/boosteroid-install-x64.zip">
 							<span class="btn-with-icon__icon">
-								<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M24.9966 0L11.4502 1.97098V11.9591L24.9966 11.8519V0Z" fill="white"></path>
-									<path d="M10.2199 22.9421L10.212 13.1092L0.00756836 13.0432L0.00814093 21.5425L10.2199 22.9421Z" fill="white"></path>
-									<path d="M24.9968 25L24.9999 13.2015L11.4314 13.1794L11.4504 23.094L24.9968 25Z" fill="white"></path>
-									<path d="M0 3.53921L10.2166 2.1521L10.2211 11.9765L0.00933285 12.0345L0 3.53921Z" fill="white"></path>
-									</svg>
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnWindows"></use>
+								</svg>
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
@@ -28,15 +25,12 @@
 						</a>
 						<p class="download__desktop-undertxt"> Windows 10, 64bit</p>
 					</li>
-					<li class="download__desktop-item">
+					<!-- <li class="download__desktop-item">
 						<a class="download__desktop-link btn-with-icon">
 							<span class="btn-with-icon__icon">
-								<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M24.9966 0L11.4502 1.97098V11.9591L24.9966 11.8519V0Z" fill="white"></path>
-									<path d="M10.2199 22.9421L10.212 13.1092L0.00756836 13.0432L0.00814093 21.5425L10.2199 22.9421Z" fill="white"></path>
-									<path d="M24.9968 25L24.9999 13.2015L11.4314 13.1794L11.4504 23.094L24.9968 25Z" fill="white"></path>
-									<path d="M0 3.53921L10.2166 2.1521L10.2211 11.9765L0.00933285 12.0345L0 3.53921Z" fill="white"></path>
-									</svg>
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnWindows"></use>
+								</svg>
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
@@ -44,31 +38,39 @@
 							</span>
 						</a>
 						<p class="download__desktop-undertxt"> Windows 7, 32bit</p>
-					</li>
-					<li class="download__desktop-item">
+					</li> -->
+					<!-- <li class="download__desktop-item">
 						<a href="#" class="download__desktop-link btn-with-icon">
 							<span class="btn-with-icon__icon">
-								<svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M18.4508 23.9933C17.0841 25.3093 15.5762 25.1041 14.139 24.4836C12.6109 23.8506 11.214 23.8106 9.60016 24.4836C7.59049 25.3443 6.52387 25.0941 5.31353 23.9933C-1.51987 17.0129 -0.511248 6.37985 7.25512 5.97955C9.13872 6.07963 10.4575 7.01284 11.567 7.0904C13.2161 6.75764 14.7946 5.80442 16.5596 5.92951C18.6803 6.09964 20.2663 6.93027 21.3254 8.42391C16.9631 11.0259 17.9969 16.7302 22.0037 18.3314C21.2018 20.4205 20.173 22.4846 18.4483 24.0108L18.4508 23.9933ZM11.4157 5.90449C11.2114 2.80213 13.7456 0.25019 16.6605 0C17.0614 3.57772 13.3825 6.25476 11.4157 5.90449Z" fill="white"></path>
-									</svg>												
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnApple"></use>
+								</svg>											
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
 								<span>Mac OS</span>
 							</span>
 						</a>
+					</li> -->
+					<li class="download__desktop-item">
+						<a href="https://play.google.com/store/apps/details?id=com.boosteroid.cloud.twa" class="download__desktop-link btn-with-icon" target="_blank">
+							<span class="btn-with-icon__icon">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnChromius"></use>
+								</svg>										
+							</span>
+							<span class="btn-with-icon__name">
+								<span class="download-for">Download for</span>
+								<span>Chromebook</span>
+							</span>
+						</a>
 					</li>
 					<li class="download__desktop-item">
-						<a href="#" class="download__desktop-link btn-with-icon">
+						<a href="https://boosteroid.com/linux/installer/boosteroid-install-x64.deb" class="download__desktop-link btn-with-icon" target="_blank">
 							<span class="btn-with-icon__icon">
-								<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M3.18421 14.9339C4.52657 14.9339 5.61476 13.8451 5.61476 12.5019C5.61476 11.1587 4.52657 10.0698 3.18421 10.0698C1.84186 10.0698 0.753662 11.1587 0.753662 12.5019C0.753662 13.8451 1.84186 14.9339 3.18421 14.9339Z" fill="white"></path>
-									<path d="M20.6127 24.9999C21.955 24.9999 23.0432 23.911 23.0432 22.5678C23.0432 21.2246 21.955 20.1357 20.6127 20.1357C19.2703 20.1357 18.1821 21.2246 18.1821 22.5678C18.1821 23.911 19.2703 24.9999 20.6127 24.9999Z" fill="white"></path>
-									<path d="M20.6102 4.86411C21.9526 4.86411 23.0408 3.77524 23.0408 2.43205C23.0408 1.08887 21.9526 0 20.6102 0C19.2679 0 18.1797 1.08887 18.1797 2.43205C18.1797 3.77524 19.2679 4.86411 20.6102 4.86411Z" fill="white"></path>
-									<path d="M14.8027 6.484C17.8292 6.484 20.3402 8.73267 20.756 11.648H24.9203C24.7311 9.35721 23.782 7.2221 22.1951 5.53827C21.1788 6.05618 19.9292 6.06605 18.8676 5.45297C17.8052 4.83909 17.1888 3.75048 17.1297 2.60962C16.3755 2.43369 15.5963 2.34253 14.8027 2.34253C13.2833 2.34253 11.8149 2.67439 10.4795 3.30373L12.5643 6.91689C13.2566 6.63807 14.0121 6.484 14.8027 6.484Z" fill="white"></path>
-									<path d="M8.78864 12.5019C8.78864 10.5845 9.68931 8.87406 11.0892 7.77132L9.00495 4.15869C8.51612 4.50042 8.05367 4.88719 7.62291 5.31794C6.41669 6.52491 5.55172 7.98217 5.07568 9.5727C6.03469 10.1943 6.66977 11.2733 6.66977 12.5019C6.66977 13.7302 6.03469 14.8095 5.07568 15.4308C5.55172 17.0213 6.41669 18.4786 7.62291 19.6856C8.0534 20.1163 8.51532 20.5026 9.00388 20.8445L11.0884 17.2316C9.68877 16.1289 8.78864 14.4184 8.78864 12.5019Z" fill="white"></path>
-									<path d="M20.7564 13.3535C20.3416 16.2699 17.8301 18.5199 14.8028 18.5199C14.0117 18.5199 13.2559 18.3658 12.5636 18.0865L10.4785 21.6999C11.8137 22.3295 13.2825 22.6616 14.8026 22.6616C15.5967 22.6616 16.3769 22.5699 17.1314 22.394C17.1894 21.2518 17.8061 20.1613 18.8693 19.5472C19.9311 18.9336 21.1813 18.9435 22.1978 19.4624C23.7834 17.7783 24.7315 15.6435 24.9201 13.3535H20.7564Z" fill="white"></path>
-									</svg>
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnLinux"></use>
+								</svg>
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
@@ -78,21 +80,16 @@
 						<p class="download__desktop-undertxt">Ubuntu 18.04+ (64bit), <br>
 							Debian 11+ (64bit), Mint 20.03+ (64bit)</p>
 						<div class="download__desktop-underlinks">
-							<a href="#" class="download__desktop-underlinks-item">Redme</a>
-							<a href="#" class="download__desktop-underlinks-item">md5</a>
+							<a href="https://boosteroid.com/linux/installer/readme.txt" class="download__desktop-underlinks-item" target="_blank">Redme</a>
+							<a href="https://boosteroid.com/linux/installer/boosteroid-install-x64.md5" class="download__desktop-underlinks-item" target="_blank">md5</a>
 						</div>
 					</li>
 					<li class="download__desktop-item">
-						<a href="#" class="download__desktop-link btn-with-icon">
+						<a href="https://boosteroid.com/linux/installer/boosteroid-install-x64.rpm" class="download__desktop-link btn-with-icon" target="_blank">
 							<span class="btn-with-icon__icon">
-								<svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M3.18421 14.9339C4.52657 14.9339 5.61476 13.8451 5.61476 12.5019C5.61476 11.1587 4.52657 10.0698 3.18421 10.0698C1.84186 10.0698 0.753662 11.1587 0.753662 12.5019C0.753662 13.8451 1.84186 14.9339 3.18421 14.9339Z" fill="white"></path>
-									<path d="M20.6127 24.9999C21.955 24.9999 23.0432 23.911 23.0432 22.5678C23.0432 21.2246 21.955 20.1357 20.6127 20.1357C19.2703 20.1357 18.1821 21.2246 18.1821 22.5678C18.1821 23.911 19.2703 24.9999 20.6127 24.9999Z" fill="white"></path>
-									<path d="M20.6102 4.86411C21.9526 4.86411 23.0408 3.77524 23.0408 2.43205C23.0408 1.08887 21.9526 0 20.6102 0C19.2679 0 18.1797 1.08887 18.1797 2.43205C18.1797 3.77524 19.2679 4.86411 20.6102 4.86411Z" fill="white"></path>
-									<path d="M14.8027 6.484C17.8292 6.484 20.3402 8.73267 20.756 11.648H24.9203C24.7311 9.35721 23.782 7.2221 22.1951 5.53827C21.1788 6.05618 19.9292 6.06605 18.8676 5.45297C17.8052 4.83909 17.1888 3.75048 17.1297 2.60962C16.3755 2.43369 15.5963 2.34253 14.8027 2.34253C13.2833 2.34253 11.8149 2.67439 10.4795 3.30373L12.5643 6.91689C13.2566 6.63807 14.0121 6.484 14.8027 6.484Z" fill="white"></path>
-									<path d="M8.78864 12.5019C8.78864 10.5845 9.68931 8.87406 11.0892 7.77132L9.00495 4.15869C8.51612 4.50042 8.05367 4.88719 7.62291 5.31794C6.41669 6.52491 5.55172 7.98217 5.07568 9.5727C6.03469 10.1943 6.66977 11.2733 6.66977 12.5019C6.66977 13.7302 6.03469 14.8095 5.07568 15.4308C5.55172 17.0213 6.41669 18.4786 7.62291 19.6856C8.0534 20.1163 8.51532 20.5026 9.00388 20.8445L11.0884 17.2316C9.68877 16.1289 8.78864 14.4184 8.78864 12.5019Z" fill="white"></path>
-									<path d="M20.7564 13.3535C20.3416 16.2699 17.8301 18.5199 14.8028 18.5199C14.0117 18.5199 13.2559 18.3658 12.5636 18.0865L10.4785 21.6999C11.8137 22.3295 13.2825 22.6616 14.8026 22.6616C15.5967 22.6616 16.3769 22.5699 17.1314 22.394C17.1894 21.2518 17.8061 20.1613 18.8693 19.5472C19.9311 18.9336 21.1813 18.9435 22.1978 19.4624C23.7834 17.7783 24.7315 15.6435 24.9201 13.3535H20.7564Z" fill="white"></path>
-									</svg>
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnLinux"></use>
+								</svg>
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
@@ -111,14 +108,11 @@
 				</div>
 				<div class="download__mobile-box">
 					<h4 class="download__mobile-title">Mobile</h4>
-					<a href="#" class="download__mobile-link btn-with-icon">
+					<a href="https://play.google.com/store/apps/details?id=com.boosteroid.streaming" class="download__mobile-link btn-with-icon" target="_blank">
 						<span class="btn-with-icon__icon">
-							<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M1.55438 8.09793C1.12167 8.09793 0.754532 8.24815 0.452737 8.54857C0.150943 8.849 0 9.20951 0 9.63027V16.0906C0 16.5219 0.150897 16.887 0.452737 17.1875C0.754532 17.4879 1.12167 17.6382 1.55438 17.6382C1.98678 17.6382 2.35169 17.488 2.64881 17.1875C2.94533 16.8871 3.09401 16.5219 3.09401 16.0906V9.63027C3.09401 9.20946 2.94311 8.849 2.64127 8.54857C2.33943 8.24815 1.97706 8.09793 1.55438 8.09793Z" fill="white"></path>
-								<path d="M14.0512 2.29849L15.1228 0.330659C15.1931 0.20038 15.1681 0.100479 15.0475 0.0302316C14.9165 -0.0303421 14.816 0.000351587 14.7457 0.120143L13.6591 2.1037C12.703 1.6829 11.6918 1.47211 10.6254 1.47211C9.55881 1.47211 8.54749 1.68294 7.59174 2.1037L6.50513 0.120143C6.43451 0.000351587 6.33393 -0.0300709 6.20333 0.0302316C6.08245 0.100795 6.05743 0.20038 6.12804 0.330659L7.19967 2.29849C6.11306 2.85012 5.24763 3.61836 4.60372 4.6049C3.95981 5.59198 3.63772 6.67064 3.63772 7.84279H17.5979C17.5979 6.67091 17.2758 5.59221 16.6319 4.6049C15.9879 3.61836 15.1275 2.85012 14.0512 2.29849ZM7.85576 5.16073C7.73987 5.27636 7.60146 5.33391 7.44057 5.33391C7.27937 5.33391 7.14377 5.27636 7.03315 5.16073C6.92253 5.04564 6.86723 4.9084 6.86723 4.7477C6.86723 4.58754 6.92253 4.45003 7.03315 4.33467C7.14377 4.21958 7.27968 4.16203 7.44057 4.16203C7.60146 4.16203 7.73987 4.21958 7.85576 4.33467C7.97137 4.4503 8.02945 4.58754 8.02945 4.7477C8.02913 4.90813 7.9711 5.04564 7.85576 5.16073ZM14.2171 5.16073C14.1062 5.27636 13.9703 5.33391 13.8097 5.33391C13.6484 5.33391 13.5101 5.27636 13.3944 5.16073C13.2786 5.04564 13.2208 4.9084 13.2208 4.7477C13.2208 4.58754 13.2786 4.45003 13.3944 4.33467C13.5101 4.21958 13.6484 4.16203 13.8097 4.16203C13.9706 4.16203 14.1062 4.21958 14.2171 4.33467C14.3278 4.4503 14.383 4.58754 14.383 4.7477C14.383 4.90813 14.3277 5.04564 14.2171 5.16073Z" fill="white"></path>
-								<path d="M3.69783 18.3891C3.69783 18.8503 3.85872 19.2407 4.18054 19.561C4.50263 19.8814 4.89479 20.0415 5.35775 20.0415H6.47465L6.48995 23.4524C6.48995 23.8831 6.64085 24.2488 6.94264 24.5493C7.24444 24.8498 7.60685 25 8.02926 25C8.4617 25 8.82906 24.8498 9.1309 24.5493C9.43274 24.2488 9.58364 23.8831 9.58364 23.4524V20.0419H11.6663V23.4524C11.6663 23.8831 11.8172 24.2488 12.119 24.5493C12.4209 24.8498 12.7879 25 13.2207 25C13.6531 25 14.0205 24.8498 14.3223 24.5493C14.6241 24.2488 14.775 23.8831 14.775 23.4524V20.0419H15.907C16.3597 20.0419 16.7468 19.8817 17.0692 19.5613C17.391 19.2409 17.5519 18.8506 17.5519 18.3894V8.38297H3.69783V18.3891Z" fill="white"></path>
-								<path d="M19.6959 8.09793C19.2732 8.09793 18.9111 8.24593 18.6092 8.54112C18.3074 8.83684 18.1565 9.2001 18.1565 9.63027V16.0906C18.1565 16.5219 18.3074 16.887 18.6092 17.1875C18.9111 17.488 19.2734 17.6382 19.6959 17.6382C20.1283 17.6382 20.4957 17.488 20.7975 17.1875C21.0994 16.887 21.2502 16.5219 21.2502 16.0906V9.63027C21.2502 9.20006 21.0994 8.83684 20.7975 8.54112C20.4957 8.24593 20.1283 8.09793 19.6959 8.09793Z" fill="white"></path>
-								</svg>
+							<svg>
+								<use href="../@img/sprites/sprite.svg#btnAndroid"></use>
+							</svg>
 						</span>
 						<span class="btn-with-icon__name">
 							<span class="download-for">Download for</span>
@@ -128,29 +122,32 @@
 					<p class="download__mobile-undertxt">Version 8+</p>
 				</div>
 			</div>
-			<div class="download__tv">
-				<div class="download__tv-image">
-					<img src="../@img/unlimited__layout_2.svg" alt="image">
-				</div>
-				<div class="download__tv-box">
-					<h4 class="download__tv-title">TV</h4>
-					<a href="#" class="download__tv-link btn-with-icon">
-						<span class="btn-with-icon__icon">
-							<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M1.55438 8.09793C1.12167 8.09793 0.754532 8.24815 0.452737 8.54857C0.150943 8.849 0 9.20951 0 9.63027V16.0906C0 16.5219 0.150897 16.887 0.452737 17.1875C0.754532 17.4879 1.12167 17.6382 1.55438 17.6382C1.98678 17.6382 2.35169 17.488 2.64881 17.1875C2.94533 16.8871 3.09401 16.5219 3.09401 16.0906V9.63027C3.09401 9.20946 2.94311 8.849 2.64127 8.54857C2.33943 8.24815 1.97706 8.09793 1.55438 8.09793Z" fill="white"></path>
-								<path d="M14.0512 2.29849L15.1228 0.330659C15.1931 0.20038 15.1681 0.100479 15.0475 0.0302316C14.9165 -0.0303421 14.816 0.000351587 14.7457 0.120143L13.6591 2.1037C12.703 1.6829 11.6918 1.47211 10.6254 1.47211C9.55881 1.47211 8.54749 1.68294 7.59174 2.1037L6.50513 0.120143C6.43451 0.000351587 6.33393 -0.0300709 6.20333 0.0302316C6.08245 0.100795 6.05743 0.20038 6.12804 0.330659L7.19967 2.29849C6.11306 2.85012 5.24763 3.61836 4.60372 4.6049C3.95981 5.59198 3.63772 6.67064 3.63772 7.84279H17.5979C17.5979 6.67091 17.2758 5.59221 16.6319 4.6049C15.9879 3.61836 15.1275 2.85012 14.0512 2.29849ZM7.85576 5.16073C7.73987 5.27636 7.60146 5.33391 7.44057 5.33391C7.27937 5.33391 7.14377 5.27636 7.03315 5.16073C6.92253 5.04564 6.86723 4.9084 6.86723 4.7477C6.86723 4.58754 6.92253 4.45003 7.03315 4.33467C7.14377 4.21958 7.27968 4.16203 7.44057 4.16203C7.60146 4.16203 7.73987 4.21958 7.85576 4.33467C7.97137 4.4503 8.02945 4.58754 8.02945 4.7477C8.02913 4.90813 7.9711 5.04564 7.85576 5.16073ZM14.2171 5.16073C14.1062 5.27636 13.9703 5.33391 13.8097 5.33391C13.6484 5.33391 13.5101 5.27636 13.3944 5.16073C13.2786 5.04564 13.2208 4.9084 13.2208 4.7477C13.2208 4.58754 13.2786 4.45003 13.3944 4.33467C13.5101 4.21958 13.6484 4.16203 13.8097 4.16203C13.9706 4.16203 14.1062 4.21958 14.2171 4.33467C14.3278 4.4503 14.383 4.58754 14.383 4.7477C14.383 4.90813 14.3277 5.04564 14.2171 5.16073Z" fill="white"></path>
-								<path d="M3.69783 18.3891C3.69783 18.8503 3.85872 19.2407 4.18054 19.561C4.50263 19.8814 4.89479 20.0415 5.35775 20.0415H6.47465L6.48995 23.4524C6.48995 23.8831 6.64085 24.2488 6.94264 24.5493C7.24444 24.8498 7.60685 25 8.02926 25C8.4617 25 8.82906 24.8498 9.1309 24.5493C9.43274 24.2488 9.58364 23.8831 9.58364 23.4524V20.0419H11.6663V23.4524C11.6663 23.8831 11.8172 24.2488 12.119 24.5493C12.4209 24.8498 12.7879 25 13.2207 25C13.6531 25 14.0205 24.8498 14.3223 24.5493C14.6241 24.2488 14.775 23.8831 14.775 23.4524V20.0419H15.907C16.3597 20.0419 16.7468 19.8817 17.0692 19.5613C17.391 19.2409 17.5519 18.8506 17.5519 18.3894V8.38297H3.69783V18.3891Z" fill="white"></path>
-								<path d="M19.6959 8.09793C19.2732 8.09793 18.9111 8.24593 18.6092 8.54112C18.3074 8.83684 18.1565 9.2001 18.1565 9.63027V16.0906C18.1565 16.5219 18.3074 16.887 18.6092 17.1875C18.9111 17.488 19.2734 17.6382 19.6959 17.6382C20.1283 17.6382 20.4957 17.488 20.7975 17.1875C21.0994 16.887 21.2502 16.5219 21.2502 16.0906V9.63027C21.2502 9.20006 21.0994 8.83684 20.7975 8.54112C20.4957 8.24593 20.1283 8.09793 19.6959 8.09793Z" fill="white"></path>
+			<div class="download__container">
+				<div class="download__tv">
+					<div class="download__tv-image">
+						<img src="../@img/unlimited__layout_2.svg" alt="image">
+					</div>
+					<div class="download__tv-box">
+						<h4 class="download__tv-title">TV</h4>
+						<a href="https://play.google.com/store/apps/details?id=com.boosteroidtv.streaming" class="download__tv-link btn-with-icon" target="_blank">
+							<span class="btn-with-icon__icon">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnAndroid"></use>
 								</svg>
-						</span>
-						<span class="btn-with-icon__name">
-							<span class="download-for">Download for</span>
-							<span>Android TV</span>
-						</span>
-					</a>
-					<p class="download__tv-undertxt">Version 8+</p>
+							</span>
+							<span class="btn-with-icon__name">
+								<span class="download-for">Download for</span>
+								<span>Android TV</span>
+							</span>
+						</a>
+						<p class="download__tv-undertxt">Version 8+</p>
+					</div>
 				</div>
+				<p class="download__paragraph">
+					Look for Boosteroid App in your Samsung and LG application stores
+				</p>
 			</div>
+			
 		</div>
 	</div>
 </section>
