--- a/src/html/secondPages/footer_with_bg.html
+++ b/src/html/secondPages/footer_with_bg.html
@@ -16,7 +16,7 @@
 				<h5 class="footer__title footer__title--support">Support</h5>
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="@@link" class="footer__item-link" onclick="return false">FAQ</a>
+						<a href="@@link" class="footer__item-link">FAQ</a>
 					</li>
 					<li class="footer__item">
 						<a href="https://help.boosteroid.com/en/" class="footer__item-link footer__item--help">Help Center</a>
