adding fix on links

--- a/src/html/secondPages/download.html
+++ b/src/html/secondPages/download.html
@@ -39,8 +39,8 @@
 						</a>
 						<p class="download__desktop-undertxt"> Windows 7, 32bit</p>
 					</li> -->
-					<!-- <li class="download__desktop-item">
-						<a href="#" class="download__desktop-link btn-with-icon">
+					<li class="download__desktop-item">
+						<a href="https://boosteroid.com/macos/installer/boosteroid-install-x64.dmg" class="download__desktop-link btn-with-icon" target="_blank">
 							<span class="btn-with-icon__icon">
 								<svg>
 									<use href="../@img/sprites/sprite.svg#btnApple"></use>
@@ -49,19 +49,6 @@
 							<span class="btn-with-icon__name">
 								<span class="download-for">Download for</span>
 								<span>Mac OS</span>
-							</span>
-						</a>
-					</li> -->
-					<li class="download__desktop-item">
-						<a href="https://play.google.com/store/apps/details?id=com.boosteroid.cloud.twa" class="download__desktop-link btn-with-icon" target="_blank">
-							<span class="btn-with-icon__icon">
-								<svg>
-									<use href="../@img/sprites/sprite.svg#btnChromius"></use>
-								</svg>										
-							</span>
-							<span class="btn-with-icon__name">
-								<span class="download-for">Download for</span>
-								<span>Chromebook</span>
 							</span>
 						</a>
 					</li>
@@ -97,6 +84,19 @@
 							</span>
 						</a>
 						<p class="download__desktop-undertxt">Fedora 34+ (64bit)</p>
+					</li>
+					<li class="download__desktop-item">
+						<a href="https://play.google.com/store/apps/details?id=com.boosteroid.cloud.twa" class="download__desktop-link btn-with-icon" target="_blank">
+							<span class="btn-with-icon__icon">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnChromius"></use>
+								</svg>										
+							</span>
+							<span class="btn-with-icon__name">
+								<span class="download-for">Download for</span>
+								<span>Chromebook</span>
+							</span>
+						</a>
 					</li>
 				</ul>
 			</div>
