--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -249,7 +249,7 @@
 				</p>
 			</li>
 
-			<li class="unlimited__footer-item">
+			<!-- <li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
 					<svg>
 						<use href="@img/sprites/sprite.svg#samsung"></use>
@@ -259,9 +259,9 @@
 					<span>Tizen</span>
 					<span class="unlimited__footer--sams">Samsung TV App</span>
 				</p>
-			</li>
+			</li> -->
 
-			<li class="unlimited__footer-item">
+			<!-- <li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
 					<svg>
 						<use href="@img/sprites/sprite.svg#LG"></use>
@@ -271,7 +271,7 @@
 					<span>WebOS</span>
 					<span class="unlimited__footer--lg">LG TV App</span>
 				</p>
-			</li>
+			</li> -->
 		</ul>
 	</div>
 </section>
