--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -4,7 +4,7 @@
 		<ul class="partners__companies">
 			<!-- 1 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.google.com/chromebook/perks/" target="_blank" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#googleParthner"></use>
 					</svg>
@@ -12,7 +12,7 @@
 			</li>
 			<!-- 2 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.16" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.lg.com/" target="_blank" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#lgParthner"></use>
 					</svg>
@@ -20,7 +20,7 @@
 			</li>
 			<!-- 3 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.amd.com/" target="_blank" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#amdParthner"></use>
 					</svg>
