--- a/src/index.html
+++ b/src/index.html
@@ -47,11 +47,11 @@
 	@@include("html/cookiePopUp.html", {})
 	<div class="banner" style="max-height: 100%;">
 		<button class="banner__button"></button>
-		<a href="#" class="banner-link">
-			<img loading=lazy class="banner__sm" width="500" height="40" src="@img/banners/banner_sm.png" alt="banner">
-			<img loading=lazy class="banner__md" width="992" height="60" src="@img/banners/banner_md.png" alt="banner">
-			<img loading=lazy width="1440" height="80" class="banner__l" src="@img/banners/banner_l.png" alt="banner">
-			<img loading=lazy class="banner__xl" src="@img/banners/banner_xl.png" alt="banner" width="1920" height="80">
+		<a href="https://www.instagram.com/p/CaW1tOqsUEx/" target="_blank" class="banner-link">
+			<img loading=lazy class="banner__sm" width="500" height="40" src="@img/banners/banner_sm.jpg" alt="banner">
+			<img loading=lazy class="banner__md" width="992" height="60" src="@img/banners/banner_md.jpg" alt="banner">
+			<img loading=lazy width="1440" height="80" class="banner__l" src="@img/banners/banner_l.jpg" alt="banner">
+			<img loading=lazy class="banner__xl" src="@img/banners/banner_xl.jpg" alt="banner" width="1920" height="80">
 		</a>
 	</div>
 
