adding sections become and youget with responsive

--- a/src/downloads/index.html
+++ b/src/downloads/index.html
@@ -151,7 +151,8 @@
 			</main>
 	
 			@@include("../html/secondPages/footer_with_bg.html", {
-				"link": '../faq/'
+				"link": '../faq/',
+				"link-partner": '../partner-page/'
 			})
 	</div>
 
