--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -151,7 +151,8 @@
 		</main>
 
 		@@include("../html/secondPages/footer_with_bg.html", {
-			"link": '#'
+			"link": '#',
+			"link-partner": '../partner-page/'
 		})
 	</div>
 	@@include("../html/cookiePopUp.html", {})
