adding readon section

--- a/src/partner-page/index.html
+++ b/src/partner-page/index.html
@@ -150,6 +150,7 @@
 				@@include("become.html")
 				@@include("youget.html")
 				@@include("looking.html")
+				@@include("readon.html")
 			</main>
 	
 			@@include("../html/secondPages/footer_with_bg.html", {
