--- a/src/partner-page/index.html
+++ b/src/partner-page/index.html
@@ -11,7 +11,7 @@
 		<title>Downloads</title>
 	</head>
 <body>
-	<!-- <div class="circle"></div> -->
+	<div class="circle"></div>
 	<div class="blur"></div>
 	<div class="wrapper">
 		<header class="header">
