fix language function and added json files (en es ua), added atributes on html

--- a/src/html/anydevice.html
+++ b/src/html/anydevice.html
@@ -1,6 +1,6 @@
 <section class="anydevice" data-scroll-section>
 	<div class="container">
-		<h3 class="anydevice__title subtitle" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Now any device is a top gaming station</h3>
+		<h3 class="anydevice__title subtitle i18nelement" data-i18n="anydevice.title" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Now any device is a top gaming station</h3>
 
 		<div class="anydevice__inner">
 			<img src="@img/anydevice.png" alt="devices" class="anydevice__inner-image" width="1398" height="604" loading="lazy">
