--- a/src/html/header.html
+++ b/src/html/header.html
@@ -24,7 +24,7 @@
 
 				<div class="header__languages">
 					<span class="close-lang "></span>
-					<p class="header__languages-select">Select Your Language</p>
+					<p class="header__languages-select i18nelement" data-i18n="link.select">Select Your Language</p>
 					<a class="header__languages-btn" href="#" data-lang="en">
 						<svg>
 							<use href="@img/sprites/sprite.svg#united_kingdom"></use>
@@ -121,7 +121,7 @@
 					</svg>
 					<span>English</span>
 				</button>
-				<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn">Sign In</a>
+				<a href="https://cloud.boosteroid.com" data-i18n="link.login" class="header__buttons-login second-btn i18nelement">Sign In</a>
 			</div>
 			<div class="burger">
 				<span></span>
