--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -1,10 +1,10 @@
 <section class="unlimited" data-scroll-section>
 	<div class="container">
 		<div class="unlimited__title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>
-			<h3 class="unlimited__title-title subtitle">Unlimited AAA gaming</h3>
+			<h3 class="unlimited__title-title subtitle i18nelement" data-i18n="unlimited.title">Unlimited AAA gaming</h3>
 			<div class="unlimited__title-note">
-				<p>Run PC games on low-end, outdated or ultra portable devices!</p>
-				<p>Play on Mac, Linux, iOS, Android, ChromeOS or smart TVs without console</p>
+				<p class="i18nelement" data-i18n="unlimited.first_note">Run PC games on low-end, outdated or ultra portable devices!</p>
+				<p class="i18nelement" data-i18n="unlimited.two_note">Play on Mac, Linux, iOS, Android, ChromeOS or smart TVs without console</p>
 			</div>
 		</div>
 		<div class="unlimited__wrap">
@@ -24,20 +24,20 @@
 							<ul class="swiper-slide__container-list">
 								<li class="swiper-slide__container-item">
 									<span>1</span> 
-									<p class="container-item--first">Sign up for Boosteroid</p>
+									<p class="i18nelement" data-i18n="unlimited.tab1_sign">Sign up for Boosteroid</p>
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>2</span> 
-									<p class="container-item--two">Subscribe</p> 
+									<p class="i18nelement" data-i18n="unlimited.tab1_subs">Subscribe</p> 
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>3</span>
-									<p class="container-item--three">Pick a game, log into game account and play!</p> 
+									<p class="i18nelement" data-i18n="unlimited.tab1_pick">Pick a game, log into game account and play!</p> 
 								</li>
 							</ul>
 						</div>
 						<div class="swiper-slide__btn">
-							<a href="https://cloud.boosteroid.com" class="swiper-slide__btn-btn basic-button">
+							<a href="https://cloud.boosteroid.com" class="swiper-slide__btn-btn basic-button i18nelement" data-i18n="global.play_now">
 								PLAY NOW
 							</a>
 						</div>
@@ -48,7 +48,7 @@
 								<div class="devices__image">
 									<img loading="lazy" src="@img/unlimited__layout_1.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text devices__text-tab2">
+								<div class="devices__text i18nelement" data-i18n="unlimited.tab2_text">
 									Enjoy our apps for Windows PC, Mac, and Linux (Ubuntu, Mint, Debian, Fedora). Run hundreds of PC games on any device close at hand!
 								</div>
 							</div>
@@ -61,8 +61,8 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab2-first">Download for</span>
-											<span>Windows</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Windows</span>
 										</span>
 									</a>
 								</li>
@@ -74,8 +74,8 @@
 											</svg>												
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab2-two">Download for</span>
-											<span>Mac OS</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Mac OS</span>
 										</span>
 									</a>
 								</li>
@@ -87,8 +87,8 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab2-three">Download for</span>
-											<span>Linux</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Linux</span>
 										</span>
 									</a>
 								</li>
@@ -100,8 +100,8 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab2-four">Download for</span>
-											<span>Chromebook</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Chromebook</span>
 										</span>
 									</a>
 								</li>
@@ -114,7 +114,7 @@
 								<div class="devices__image">
 									<img src="@img/unlimited__layout_2.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text devices__text-tab3">
+								<div class="devices__text i18nelement" data-i18n="unlimited.tab3_text">
 									Enjoy PC games on TV without a console. Grab a gamepad and play on a big screen! 
 								</div>
 							</div>
@@ -127,14 +127,14 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab3-one">Download for</span>
-											<span>Android TV</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Android TV</span>
 										</span>
 									</a>
 								</li>
 							</ul>
 							<div class="devices__description">
-								<p class="devices__description-tab3">Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
+								<p class="i18nelement" data-i18n="unlimited.tab3_look">Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
 							</div>
 							
 						</div>
@@ -145,7 +145,7 @@
 								<div class="devices__image devices__image--tv">
 									<img loading="lazy" class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text devices__text-tab4">
+								<div class="devices__text i18nelement" data-i18n="unlimited.tab4_text">
 									PC games on a smartphone? Why not! Play wherever you are no matter if you don’t have a computer around.
 								</div>
 							</div>
@@ -158,8 +158,8 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span class="tab4-one">Download for</span>
-											<span>Android Mobile</span>
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">Android Mobile</span>
 										</span>
 									</a>
 								</li>
@@ -197,7 +197,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Windows</span>
-					<span class="unlimited__footer--win">Browser & App</span>
+					<span class="i18nelement" data-i18n="global.browser_app">Browser & App</span>
 				</p>
 			</li>
 
@@ -209,7 +209,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Apple</span>
-					<span class="unlimited__footer--apple">Browser & App</span>
+					<span class="i18nelement" data-i18n="global.browser_app">Browser & App</span>
 				</p>
 			</li>
 
@@ -221,7 +221,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Linux</span>
-					<span class="unlimited__footer--linux">Browser & App</span>
+					<span class="i18nelement" data-i18n="global.browser_app">Browser & App</span>
 				</p>
 			</li>
 
@@ -233,7 +233,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Android</span>
-					<span class="unlimited__footer--andr">TV & Mobile App, Browser</span>
+					<span class="i18nelement" data-i18n="global.tv_mob_brows">TV & Mobile App, Browser</span>
 				</p>
 			</li>
 
@@ -245,7 +245,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>ChromeOS</span>
-					<span class="unlimited__footer--chrome">Chromebook Web App</span>
+					<span class="i18nelement" data-i18n="global.chromebook">Chromebook Web App</span>
 				</p>
 			</li>
 
