--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -2,35 +2,31 @@
 	<div class="container">
 		<div class="platform__container">
 			<div class="platform__description">
-				<h2 class="platform__title title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>CLOUD GAMING PLATFORM</h2>
+				<h2 class="platform__title title title-effect i18nelement" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll data-i18n="platform.title">CLOUD GAMING PLATFORM</h2>
 				<div class="platform__cards">
-					<div class="platform__cards-item platform__cards-item--device">
+					<div class="platform__cards-item i18nelement" data-i18n="platform.device">
 						Run PC games <br> on any device
 					</div>
-					<div class="platform__cards-item platform__cards-item--browser">
+					<div class="platform__cards-item i18nelement" data-i18n="platform.play">
 						No downloads! <br> Play in browser
 					</div>
 				</div>
 				<div class="platform__price">
-					<h4 class="platform__price-title">
+					<h4 class="platform__price-title i18nelement" data-i18n="platform.price">
 						settings high — Prices low
 					</h4>
 					<p class="platform__price-price">
-						<span class="platform__price-price--from">From</span>
+						<span class="platform__price-price--from i18nelement" data-i18n="platform.price_from">From</span>
 						<span class="platform__price-price--price"><sup>€</sup>7.49</span>
-						<!-- <span>€14.99</span> -->
 					</p>
-					<p class="platform__price-subscription">
+					<p class="platform__price-subscription i18nelement" data-i18n="platform.price_subsc">
 						per month with annual subscription
 					</p>
 				</div>
 				<div class="platform__button">
-					<a href="https://cloud.boosteroid.com" class="platform__button-btn basic-button">PLAY NOW</a>
+					<a href="https://cloud.boosteroid.com" class="platform__button-btn basic-button i18nelement" data-i18n="global.play_now">PLAY NOW</a>
 				</div>
 			</div>
-			<!-- <div class="platform__image" data-scroll data-scroll-speed="4">
-				<img src="@img/platform_1.png" alt="image" width="924" height="937">
-			</div> -->
 			<div class="platform__image">
 				<img loading=lazy src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div>
