fixed lang bugs and added ro lang

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -116,10 +116,10 @@
 			</div>
 			<div class="header__buttons">
 				<button class="header__buttons-lang">
-					<svg>
+					<svg class="i18nelement" data-i18n="global.svg_use">
 						<use href="@img/sprites/sprite.svg#united_kingdom"></use>
 					</svg>
-					<span>English</span>
+					<span class="i18nelement" data-i18n="global.button_lang">English</span>
 				</button>
 				<a href="https://cloud.boosteroid.com" data-i18n="link.login" class="header__buttons-login second-btn i18nelement">Sign In</a>
 			</div>
