--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -68,7 +68,7 @@
 			</li>
 			<!-- 9 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="0" data-scroll-delay="0" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.skyworth.net/global" rel="nofollow" target="_blank">
+				<a class="partners__companies-link" href="https://en.skyworthdigital.com/news-detail/InfoId/173.html" rel="nofollow" target="_blank">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
 					</svg>
