--- a/src/partner-page/index.html
+++ b/src/partner-page/index.html
@@ -24,23 +24,23 @@
 						</a>
 						<ul class="header__list">
 							<li class="header__item">
-								<a href="../downloads/" class="header__item-link header__item-link--md">downloads</a>
-								<a href="../downloads/" class="header__item-link header__item-link--sm">our app</a>
+								<a href="../downloads/" class="header__item-link header__item-link--md i18nelement" data-i18n="link.ourapp">downloads</a>
+								<a href="../downloads/" class="header__item-link header__item-link--sm i18nelement" data-i18n="link.ourapp">our app</a>
 							</li>
 							<li class="header__item">
-								<a href="../faq/" class="header__item-link">faq</a>
+								<a href="../faq/" class="header__item-link i18nelement" data-i18n="link.faq">faq</a>
 							</li>
 							<li class="header__item">
-								<a href="https://help.boosteroid.com/en/" class="header__item-link header__item-link--help">Help center</a>
+								<a href="https://help.boosteroid.com/en/" class="header__item-link i18nelement" data-i18n="link.helpcenter">Help center</a>
 							</li>
 							<li class="header__item">
-								<a href="https://boosteroid.com/blog/" class="header__item-link header__item-link--blog">Blog</a>
+								<a href="https://boosteroid.com/blog/" class="header__item-link i18nelement" data-i18n="link.blog">Blog</a>
 							</li>
 						</ul>
 
 						<div class="header__languages">
 							<span class="close-lang "></span>
-							<p>Select Your Language</p>
+							<p class="i18nelement" data-i18n="link.select">Select Your Language</p>
 							<a class="header__languages-btn" href="#" data-lang="en">
 								<svg>
 									<use href="../@img/sprites/sprite.svg#united_kingdom"></use>
@@ -132,12 +132,12 @@
 					</div>
 					<div class="header__buttons">
 						<button class="header__buttons-lang">
-							<svg>
+							<svg class="i18nelement" data-i18n="global.svg_use">
 								<use href="../@img/sprites/sprite.svg#united_kingdom"></use>
 							</svg>
-							<span>English</span>
+							<span class="i18nelement" data-i18n="global.button_lang">English</span>
 						</button>
-						<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn">Sign In</a>
+						<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn i18nelement" data-i18n="link.login">Sign In</a>
 					</div>
 					<div class="burger">
 						<span></span>
